--- a/site-institucional/style.css
+++ b/site-institucional/style.css
@@ -28,17 +28,132 @@
     justify-content: space-evenly;
 }
 .header h1{
-    color: aquamarine;
+    color: white;
 }
 .navbar li{
     font-weight: lighter;
-    color: goldenrod;
+    color: white;
+}
+.navbar li:hover {
+    color: steelblue;
 }
 .navbar li a{
-    color: goldenrod;
+    color: white;
     text-decoration: none;
 }
 
 .navbar .active {
     font-weight: bolder;
+}
+
+.banner {
+    height: 500px;
+    background-image: url('https://images7.alphacoders.com/772/thumb-1920-772110.jpg');
+    background-size: cover;
+    background-position: 0vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.message{
+    margin-right: 300px;
+    width: 10%;
+    color: white;
+    font-size: 30px;
+}
+
+.message span{
+    font-weight: bolder;
+}
+
+.proposito {
+    height: 450px;
+    background-color: #e5e5e5;
+}
+
+.proposito .conteiner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.proposito .conteiner h2{
+    color:steelblue;
+    background-color: white;
+    padding: 25px;
+    border-radius: 25px;
+}
+
+.proposito .conteiner .mvv div img {
+ height: 100px;
+ width: 100px;
+}
+
+.proposito .conteiner .mvv {
+    margin-top: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.proposito .conteiner .mvv div {
+    width: 25vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.proposito .conteiner .mvv div h3 {
+    color: steelblue;
+    font-weight: bolder;
+    margin: 25px 0;
+}
+
+.footer {
+    background-color: steelblue;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer p {
+    color: white;
+}
+
+.banner .formLogin {
+    background-color: white;
+    height: 350px;
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+.banner .formLogin h2{
+    color: steelblue;
+}
+.banner .formLogin div span{
+    color: steelblue;
+}
+.banner .formLogin div {
+    display: flex;
+    flex-direction: column;
+}
+
+.banner .formLogin div input {
+    border: 2px solid steelblue;
+    border-radius: 8px;
+    padding: 10px;
+}
+
+.banner .formLogin button {
+    background-color: steelblue;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 8px;
 }
