--- a/site-institucional/style.css
+++ b/site-institucional/style.css
@@ -6,8 +6,8 @@
 
 .header{
     height: 100px;
-    background-color: black;
-    border: 3px solid aquamarine;
+    background-color: gray;
+    border: 3px white;
 }
 .conteiner{
     width: 80%;
@@ -20,21 +20,26 @@
     justify-content: space-between;
     align-items: center;
 }
-.navbar{
-    
+.header .conteiner img{
+    height: 80px;
+    width: 80px;
+}
+.navbar{   
     display: flex;
     list-style: none;
     width: 50%;
     justify-content: space-evenly;
 }
 .header h1{
+    margin-right: 220px;
     color: white;
 }
 .navbar li{
     font-weight: lighter;
     color: white;
 }
-.navbar li:hover {
+
+.navbar li a:hover {
     color: steelblue;
 }
 .navbar li a{
@@ -128,6 +133,7 @@
     background-color: white;
     height: 350px;
     width: 25%;
+    border-radius: 8px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -151,6 +157,44 @@
 }
 
 .banner .formLogin button {
+    background-color: steelblue;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 8px;
+}
+
+.banner .formCadastro {
+    background-color: white;
+    height: 430px;
+    width: 25%;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.banner .formCadastro h2{
+    color: steelblue;
+}
+
+.banner .formCadastro div span {
+    color: steelblue;
+}
+
+.banner .formCadastro div {
+    display: flex;
+    flex-direction: column;
+}
+
+.banner .formCadastro input{
+    border: 2px solid steelblue;
+    border-radius: 8px;
+    padding: 10px;
+}
+
+.banner .formCadastro button {
     background-color: steelblue;
     color: white;
     border: none;
